# poc-handler

./: .gitignore  .ripgreprc  Cargo.toml  README.md  docker-compose.yml  flake.nix
src/: lib.rs  main.rs  routes.rs
src/common/: response.rs
src/config/: state.rs
src/database/: common_db.rs  mod.rs
src/routes/: health_r.rs
src/tests/: mod.rs
