[package]
name = "poc-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix
actix-web = "4.0.1"
actix-cors = "0.6.1"
actix-web-httpauth = "0.8.0"
actix-files = "0.6.0"
actix-utils = "3.0.0"
actix-multipart = "0.6.0"

# Future utils for Auth FromRequest
futures-util = "0.3.21"
# Http client
reqwest = { version = "0.11.10", features = ["json", "multipart", "rustls"] }
# JWT Verificator
alcoholic_jwt = "4091.0.0"
# .env parser
dotenvy = "0.15.3"
# Env logger
env_logger = "0.9.0"
# tokio + rustls
sqlx = { version = "0.6.1", features = [ "postgres", "chrono", "uuid", "macros", "migrate", "runtime-actix-rustls", "offline", "json" ] }
# Serialization
serde = { version = "1.0.160", features = [ "derive" ] }
serde_json = "1.0.96"
serde_with = "2.2.0"
# Log
log = "0.4.17"
# Validator Struct
validator = { version = "0.16.0", features = ["derive"] }
# Allow generic derivation
derive_more = "0.99.17"
# Generic anyhow for error result
anyhow = "1.0.57"
# Allow trait to be async
async-trait = "0.1.53"
# Random
rand = "0.8.5"
# Base64 encoding
base64 = "0.13.0"
# regex = "1.5.6"
# Allowing Defer code
# scopeguard = "1.1.0"
# async_fn_traits = "0.1.1"
# Mocking trait
mockall = "0.11.1"
# Tokio futures
tokio = { version = "1.18.2", features = [ "full" ] }
#tokio-stream = "0.1.8"
futures = "0.3.21"
# OpenAPI
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
# CSV
csv = "1.1.6"
mime = "0.3.16"
# Crate for enumIter
strum = "0.24.1"  
strum_macros = "0.24"

## errors, logs, config
thiserror = "1.0.38" # typed errors for each service

## crypto, randomness
cardano-serialization-lib = "11.4.0"

## Redis
redis = { version = "0.22.3", features = ['r2d2'] }
r2d2 = "0.8.10"
redlock-async = "0.0.3"

hex = "0.4.3"

# Date and time utilities
[dependencies.chrono]
version = "0.4.19"
default-features = false
features = ["serde", "std", "clock"]

[dependencies.uuid]
version = "1.0.0"
default-features = false
features = ["serde", "v4"]

[build-dependencies]
dotenv = "0.15.0"
# async-std = { version = "1.6", features = [ "attributes" ] }
sqlx = { version = "0.6.1", features = [ "postgres", "chrono", "uuid", "macros", "migrate" ] }
tokio = { version = "1.18.2", features = [ "full" ] }
env_logger = "0.9.0"

[dependencies.magic-crypt]
version = "3.1.10"
default-features = false

[dev-dependencies]
mockito = "0.31.0"
tokio-test = "0.4.2"
actix-rt = "2.7.0"
env_logger = "0.9.0"
tokio = { version = "1.18.2", features = ["full"] }
futures = "0.3.21"
# Usefull for property base tests.
#quickcheck = "1"
#quickcheck_macros = "1"
#quickcheck_async = "0.1.1"
proptest = "1.0.0"
proptest-derive = "0.3.0"
